Commit após soft Reset

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Olá GIT
+    Olá GIT, recentemente eu dei um segundo commit e após eu fiz um hard reset.
 </body>
 </html>
